--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -33,11 +33,11 @@ noFooterMain: true
             <fieldset class="gc-chckbxrdio">
                 <ul class="list-unstyled form-inline lst-spcd-2">
                     <li class="checkbox mrgn-lft-md">
-                        <input id="addStyle" type="checkbox" checked="checked">
+                        <input id="addStyles" type="checkbox" checked="checked">
                         <label for="addStyles">Include all <code>&lt;style&gt;</code> tags</label>
                     </li>
                     <li class="checkbox mrgn-lft-md">
-                        <input id="addScript" type="checkbox" checked="checked">
+                        <input id="addScripts" type="checkbox" checked="checked">
                         <label for="addScripts">Include all inline <code>&lt;script&gt;</code> tags</label>
                     </li>
                 </ul>
