--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -115,7 +115,7 @@ noFooterMain: true
                 absUrlRegEx = new RegExp("((?:<[a-z]+?\\s[^>]*?)(?:(?:href|src|cite|longdesc|action|formaction|poster|icon|manifest|srcset|data(?:-[a-z\\-]+)?)=['\"]))(\\/(?:[^\\/]{1}[^\'\"]+?))(?=['\"][^>]*?>)", "giv"),
                 data = await $.get(pageURI), 
                 regexLinkData = await $.get(jsonFilePath), 
-                fileLinkArr = JSON.parse(regexLinkData), 
+//                fileLinkArr = JSON.parse(regexLinkData), 
                 result = data.replace(absUrlRegEx, "$1" + rootDomain + "$2"),
                 pageObj = parser.parseFromString(result, "text/html"),
                 pageTemp = pageObj.cloneNode(true),
