--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -114,7 +114,8 @@ noFooterMain: true
                 rootDomain = "https://canada.ca",
                 absUrlRegEx = new RegExp("((?:<[a-z]+?\\s[^>]*?)(?:(?:href|src|cite|longdesc|action|formaction|poster|icon|manifest|srcset|data(?:-[a-z\\-]+)?)=['\"]))(\\/(?:[^\\/]{1}[^\'\"]+?))(?=['\"][^>]*?>)", "giv"),
                 data = await $.get(pageURI), 
-                regexLinkData = await $.get(jsonFilePath), 
+//                regexLinkData = await $.get(jsonFilePath), 
+                fileLinkArr = await $.get(jsonFilePath), 
 //                fileLinkArr = JSON.parse(regexLinkData), 
                 result = data.replace(absUrlRegEx, "$1" + rootDomain + "$2"),
                 pageObj = parser.parseFromString(result, "text/html"),
