--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -1,6 +1,6 @@
 ---
 testBanner: false
-title: "Convert page to GCWeb/Jekyll page"
+title: "Convert page to GCWeb/Jekyll page tool"
 dateModified: 2025-04-30
 dateIssued: 2025-04-30
 nomenu: true
@@ -11,6 +11,19 @@ noFooterContextual: true
 noFooterCorporate: true
 noFooterMain: true
 ---
+
+<br>
+<section>
+    <details>
+        <summary class="h4">Creating a bookmarklet to launch the <abbr title="intranet Content Management System">iCMS</abbr> paths shortcut</summary>
+        <p>This bookmarklet works like a bookmark but will launch the <strong>Convert page to GCWeb/Jekyll page tool</strong> for the current page you are viewing.</p>
+        <p>To create a bookmarklet for the <strong>Convert page to GCWeb/Jekyll page tool</strong> right-click the following link and select <strong>Add to favorites…</strong> or drag the link to your favorites or favorites bar.</p>
+        <ul class="mrgn-tp-md list-unstyled">
+            <li><a href="javascript:(function()%7blocation.href='https://cra-design.github.io/core-prototype/core/tools/page-convert-jekyll.html?uri='+encodeURIComponent(location.href);%7d)();">Convert page to GCWeb/Jekyll page tool</a></li>
+        </ul>
+    </details>
+</section>
+<div class="clearfix"></div>
 
 <form id="convertform" action="#" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded" method="get">
     <fieldset>
