--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -15,7 +15,7 @@ noFooterMain: true
 <br>
 <section>
     <details>
-        <summary class="h4">Creating a bookmarklet to launch the <abbr title="intranet Content Management System">iCMS</abbr> paths shortcut</summary>
+        <summary class="h4">Creating a bookmarklet to launch the Convert page to GCWeb/Jekyll page tool</summary>
         <p>This bookmarklet works like a bookmark but will launch the <strong>Convert page to GCWeb/Jekyll page tool</strong> for the current page you are viewing.</p>
         <p>To create a bookmarklet for the <strong>Convert page to GCWeb/Jekyll page tool</strong> right-click the following link and select <strong>Add to favorites…</strong> or drag the link to your favorites or favorites bar.</p>
         <ul class="mrgn-tp-md list-unstyled">
