--- a/core/tools/page-convert-jekyll.html
+++ b/core/tools/page-convert-jekyll.html
@@ -93,7 +93,7 @@ noFooterMain: true
     </li>
     <li class="btn-group"><button id="dev_clear" class="btn btn-default" type="button"><strong>Clear</strong></button></li>
 </ul>
-<p>Current status: <strong><span id="devStatus">blank</span</strong></p>
+<p>Current status: <strong><span id="devStatus">blank</span></strong></p>
 <script defer="defer">
     "use strict";
 
@@ -270,19 +270,19 @@ noFooterMain: true
     });
 
     // Developer options ON button
-    document.getElementById("dev_on").addEventListener("click", function (event) {
+    document.getElementById("dev_on").addEventListener("click", function () {
         localStorage.setItem("gitCRATemplateDevOptions", true);
         document.getElementById("devStatus").innerHTML = "ON";
     });
 
     // Developer options OFF button
-    document.getElementById("dev_off").addEventListener("click", function (event) {
+    document.getElementById("dev_off").addEventListener("click", function () {
         localStorage.setItem("gitCRATemplateDevOptions", false);
         document.getElementById("devStatus").innerHTML = "OFF";
     });
 
     // Developer options CLEAR button
-    document.getElementById("dev_clear").addEventListener("click", function (event) {
+    document.getElementById("dev_clear").addEventListener("click", function () {
         localStorage.removeItem("gitCRATemplateDevOptions");
         document.getElementById("devStatus").innerHTML = "blank";
     });
