--- a/resources/tools/page-convert-jekyll.html
+++ b/resources/tools/page-convert-jekyll.html
@@ -14,6 +14,11 @@ script:
   - https://www.canada.ca/etc/designs/canada/wet-boew/js/ep-pp.min.js
   - https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2024-09-kejimkujik.js
   - https://cra-design.github.io/core-prototype/resources/scripts/convert-page-jekyll.js
+  - https://unpkg.com/prettier@3.5.3/standalone.js
+  - https://unpkg.com/prettier@3.5.3/plugins/babel.js
+  - https://unpkg.com/prettier@3.5.3/plugins/estree.js
+  - https://unpkg.com/prettier@3.5.3/plugins/html.js
+
 ---
 
 <br>
@@ -56,6 +61,10 @@ script:
                     <li class="checkbox mrgn-lft-md">
                         <input id="addScripts" type="checkbox" checked="checked" value="true">
                         <label for="addScripts">Include all inline <code>&lt;script&gt;</code> tags</label>
+                    </li>
+                    <li class="wb-inv checkbox mrgn-lft-md">
+                        <input id="usePrettier" type="checkbox" checked="checked" value="true">
+                        <label for="usePrettier">format HTML (Prettier)</label>
                     </li>
                 </ul>
             </fieldset>
@@ -116,9 +125,14 @@ script:
 
     // submit button
     document.getElementById("submitbutton").addEventListener("click", async function (e) {
+        let pageCode = "";
+
         document.getElementById("sourcetext").value = "";
         if (document.getElementById("uri").value !== "") {
-            document.getElementById("sourcetext").value = await generatePage(document.getElementById("uri").value, jsonFilePath, document.getElementById("layout").value, document.getElementById("addScripts").checked, document.getElementById("addStyles").checked);
+            pageCode = await generatePage(document.getElementById("uri").value, jsonFilePath, document.getElementById("layout").value, document.getElementById("addScripts").checked, document.getElementById("addStyles").checked);
+//          if (document.getElementById("usePrettier").checked === true) {
+//          }
+            document.getElementById("sourcetext").value = "---\n" + pageCode.yamlCode + "---\n\n" + pageCode.cssCode + pageCode.htmlCode + "\n" + pageCode.scriptCode;
         }
         e.stopPropagation();
         e.preventDefault();
