--- a/resources/tools/page-convert-jekyll.html
+++ b/resources/tools/page-convert-jekyll.html
@@ -95,6 +95,9 @@ script:
             <label for="sourcetext" id="contentlabel" class="control-label form-input-lg"><span class="field-name h3">Source:</span></label>
             <!-- START Result textarea -->
             <textarea id="sourcetext" name="content" cols="132" autofocus="autofocus" class="form-control input-md mrgn-bttm-md full-width wb-clipboard" aria-labelledby="contentlabel" aria-multiline="true" rows="23"></textarea>
+            <br>
+            <label for="scripttext" id="scriptlabel" class="control-label form-input-lg"><span class="field-name h3">Inline <code>scripts</code>:</span></label>
+            <textarea id="scripttext" name="scripts" cols="132" autofocus="autofocus" class="form-control input-md mrgn-bttm-md full-width wb-clipboard" aria-labelledby="contentlabel" aria-multiline="true" rows="13"></textarea>
             <!-- END Result textarea -->
         </div>
 <!--
@@ -140,7 +143,7 @@ script:
         if (document.getElementById("uri").value !== "") {
             pageData = outputPage.convert(convertObj, fileLinkList, document.getElementById("uri").value, document.getElementById("layout").value, document.getElementById("addScripts").checked, document.getElementById("addStyles").checked).pagedata();
             if (document.getElementById("usePrettier").checked === true) {
-                htmlMain = await prettier.format(pageData.cssCode + pageData.htmlCode + "\n" + pageData.scriptCode, {
+                htmlMain = await prettier.format(pageData.cssCode + pageData.htmlCode, {
                     "parser": "html",
                     "plugins": [prettierPlugins.estree, prettierPlugins.html],
                     "arrowParens": "always",
@@ -162,7 +165,7 @@ script:
                     "vueIndentScriptAndStyle": true
                 });
             } else {
-                htmlMain = pageData.cssCode + pageData.htmlCode + "\n" + pageData.scriptCode;
+                htmlMain = pageData.cssCode + pageData.htmlCode;
             }
              
             resultArea.value = "---\n" + pageData.yamlCode + "---\n\n" + htmlMain;
@@ -170,6 +173,7 @@ script:
             resultArea.scrollTop = 0;
             resultArea.selectionStart = 0;
             resultArea.selectionEnd = 0;
+            (document.getElementById("scripttext").value = pageData.scriptCode;
         }
         e.stopPropagation();
         e.preventDefault();
