--- a/resources/tools/page-convert-jekyll.html
+++ b/resources/tools/page-convert-jekyll.html
@@ -173,7 +173,7 @@ script:
             resultArea.scrollTop = 0;
             resultArea.selectionStart = 0;
             resultArea.selectionEnd = 0;
-            (document.getElementById("scripttext").value = pageData.scriptCode;
+            document.getElementById("scripttext").value = pageData.scriptCode;
         }
         e.stopPropagation();
         e.preventDefault();
