--- a/resources/tools/page-convert-jekyll.html
+++ b/resources/tools/page-convert-jekyll.html
@@ -69,7 +69,7 @@ script:
                     </li>
                     <li class="checkbox mrgn-lft-md">
                         <input id="usePrettier" type="checkbox" checked="checked" value="true">
-                        <label for="usePrettier">format HTML (Prettier)</label>
+                        <label for="usePrettier">Format HTML (Prettier)</label>
                     </li>
                 </ul>
             </fieldset>
